[package]
name = "cnxt"
description = "Coloring made simple, for your terminal."
keywords = ["terminal", "color", "ansi"]
version = "0.1.0"
edition = "2024"
authors = ["Lance <me@lance.fun>", "Thomas Wickham <mackwic@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/cnlancehu/cnxt"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
windows-version = "0"

[dev-dependencies]
anyhow = "1"
crossterm = "0"
image = "0"

[[example]]
name = "banner"
path = "examples/banner.rs"

[[example]]
name = "usage"
path = "examples/usage.rs"
